make code Java 8 compatible